tests/parser/fail/v20_fail_map_removed.ep
# COMPILE_FAIL: Expected RBRACKET
fun main(): void {
    let values: map[str]i64 = 0
}
